custom js with better structure

--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -147,7 +147,7 @@
           </a>
 
 
-        <select id="vatid" onchange="vatPricing()">
+        <select id="vatid" onchange="vatApp.pricing()">
           <option value="">Vat Pricing</option>
           <option value="inc">inc Vat Prices</option>
           <option value="exc">exc Vat Prices</option>
